# AUTOMYX-2.5

./: .env.example  .gitignore  AUTOMYX.md  Agents.md  Architecture.md  AutomyxSetup.spec  BUILD.bat  CHANGELOG.md  CLAUDE_CODE_STYLE.md  CONTRIBUTING.md  LICENSE  MULTI_AGENT_SYSTEM.md  Modelfile  README.md  README_MODEL.md  Soul.md  TERMINAL_README.md  TRANSFORMACION_COMPLETA.md  Vision.md  automix.py  automyx.py  automyx.spec  automyx_cli.py  automyx_fast.spec  automyx_installer.iss  build_windows.py  check_vast.py  claude-prompt-0c3fd8f3-2fef-4ab1-8be4-7c0a39717585.md  db_migrate.py  discord_bot.py  instagram_bot.py  install.py  installer_app.py  ollama_launch.py  package-lock.json  package.json  pyproject.toml  requirements.txt  server.js  start.bat  (+6 more)
api/: main.py
aumformbring_data/: conversation_memory.json  learned_patterns.json  learned_skills.json
core/: agent.py  api_server.py  audit.py  auto_docs.py  auto_install.py  auto_skill.py  automyx_cli_v5.py  autonomy.py  banner.py  claude_ui.py  code_review.py  config.py  context.py  database_agent.py  display_fix.py  enterprise.py  gateway.py  github_agent.py  hardware_detector.py  intent_engine.py  json_protocol.py  mcp_client.py  memory.py  model_config.py  model_selector.py  multi_agent.py  multi_task.py  onboard.py  onboard_pro.py  onboard_pro_v3.py  onboard_pro_v4.py  onboard_pro_v5.py  opencode_bridge.py  pair_agent.py  permission_escalation.py  permissions.py  quiet.py  rag.py  repl.py  scheduler.py  (+15 more)
frontend/: index.html
installer/: automyx_setup.iss  default.env
nexus_data/: nexus_trajectories.db  (+1 more)
(+273 files in other folders)
