[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "automyx"
version = "2.5.0"
description = "Automyx - AI Automation Suite with System Control"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "NEXORA TECHNOLOGY LLC"}
]
dependencies = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.20",
    "openai>=1.0",
    "requests>=2.30",
    "colorama>=0.4",
    "pydantic>=2.0",
    "jinja2>=3.1",
    "python-multipart>=0.0",
    "Pillow>=10.0"
]

[project.scripts]
automyx = "automix:main"

[project.urls]
Homepage = "https://github.com/yourusername/automyx"
